[package]
name = "mient"
version = "0.1.0"
authors = ["Cédric Barreteau"]
edition = "2018"

[dependencies]
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk" }
url = "*"
unicode-width = "*"

tui = "*"
termion = "*"

tokio = { version = "*", features = ["full"] }
async-trait = "*"

serde = { version = "*", features = ["derive"] }
serde_json = "*"
