[package]
name = "mient"
version = "0.1.0"
authors = ["Cédric Barreteau"]
edition = "2018"

[dependencies]
url = "*"
unicode-width = "*"
signal-hook = "*"

tui = "*"
termion = "*"

tokio = { version = "*", features = ["full"] }
async-trait = "*"

serde = { version = "*", features = ["derive"] }
serde_json = "*"

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk"
default-features = false
features = ["encryption", "sled_cryptostore", "sled_state_store", "rustls-tls"]
