[package]
name = "mient"
version = "0.1.0"
authors = ["Cédric Barreteau"]
edition = "2018"

[dependencies]
url = "*"
unicode-width = "*"
signal-hook = "*"
signal-hook-tokio = { version = "*", features = ["futures-v0_3"] }

tui = "*"
termion = "*"

tokio = { version = "*", features = ["full"] }
async-trait = "*"
futures = "*"

serde = { version = "*", features = ["derive"] }
serde_json = "*"

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk"
default-features = false
features = ["encryption", "sled_cryptostore", "sled_state_store", "rustls-tls"]
